# python_example

./: Dockerfile  Readme.rst  config.ini  pyproject.toml
pwall_aiohttp/: __init__.py  routes.py
pwall_aiohttp/handlers/: __init__.py  actions.py  checkout.py  redirect.py  results.py
pwall_aiohttp/templates/: backoffice.jinja2  checkout.jinja2  results.jinja2
